adding (list of organization in project creation) login page and signup page and method

--- a/src/app/add-project/add-project.component.html
+++ b/src/app/add-project/add-project.component.html
@@ -6,7 +6,7 @@
 <!--        <input type="text" id="organizationName" class='form-control' formControlName="organizationName" ngModel/>-->
         <div class="col-md-6">
           <select class="form-control  form-control-tiny" formControlName="organizationName" id="organizationName">
-            <option [value]="null" selected hidden>Select Organization</option>
+            <option [value]="null" selected hidden>Organization Name</option>
             <option *ngFor="let org of organizationData"
                     [ngValue]="org">
               {{org.organizationName}}
@@ -15,9 +15,6 @@
           <input type="text" id="projectName" class='form-control' formControlName='projectName'
                  placeholder='Enter ProjectName' ngModel/>
         </div>
-
-
-
       </div>
       <button nbButton Class="btn btn-warning" (click)="addProject()">Add Organization</button>
     </div>
