--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="addForm">
   <div class="form-group">
     <label className='form-label'>User Name</label><br>
-    <input required type="text" className='form-control' formControlName='username' placeholder='Enter User Name' ngModel/>
+    <input required type="text" className='form-control' formControlName='userName' placeholder='Enter User Name' ngModel/>
   </div><pre></pre>
   <div class="form-group">
     <label className='form-label'>Password</label><br>
