Modified the organization form, adding validation on add project and refining the app component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <div class="wrapper">
   <!-- Sidebar  -->
   <nav id="sidebar">
@@ -8,11 +7,11 @@
 
     <ul class="list-unstyled components">
       <li class="active">
-        <a (click)="routeToAddOrganization()"  class="cursor-pointer">Add Organization</a>
+        <a (click)="routeToAddOrganization()" class="cursor-pointer">Add Organization</a>
       </li>
 
       <li>
-        <a   (click)="routeToAddProject()" class="cursor-pointer">Add Project</a>
+        <a (click)="routeToAddProject()" class="cursor-pointer">Add Project</a>
       </li>
       <li>
         <a (click)="routeToSignUp()">Sign Up</a>
@@ -21,10 +20,10 @@
         <a (click)="routeToLogin()">Sign In</a>
       </li>
       <li>
-        <a (click)="routeToRequestClarification()" >Request Clarification</a>
+        <a (click)="routeToRequestClarification()">Request Clarification</a>
       </li>
       <li>
-        <a href="#">Clarification Table</a>
+        <a (click)="routeToClarificationTable()">Clarification Table</a>
       </li>
     </ul>
 
@@ -33,7 +32,7 @@
   <!-- Page Content  -->
   <div id="content">
 
-<router-outlet></router-outlet>
+    <router-outlet></router-outlet>
 
   </div>
 </div>
