--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,7 +10,6 @@
       <input class="form-control" id="designation" formControlName='designation' type="text"
              placeholder='Enter Your Designation'/>
     </div>
-
     <div class="col-md-4">
       <label for="email">Email</label>
       <input class="form-control" id="email" formControlName='email' type="email" placeholder='Enter Your Email'/>
@@ -29,7 +28,8 @@
       <label for="password">Password</label>
       <input class="form-control" id="password" formControlName='password' type="password"
              placeholder='Enter Your Password'/>
-    </div><pre></pre>
+    </div>
+    <pre></pre>
     <div class="col-md-4">
       <label for="confirmPassword">Confirm Password</label>
       <input class="form-control" formControlName='passwordConfirm' id="confirmPassword" type="password"
@@ -44,9 +44,9 @@
       </select>
     </div>
   </div>
-<div class="row">
-  <div class="col-md-12 d-flex justify-content-end">
-    <button nbButton Class="btn btn-warning" (click)="addUser()">Register User</button>
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-end">
+      <button nbButton Class="btn btn-warning" (click)="addUser()">Register User</button>
+    </div>
   </div>
-</div>
 </form>
