--- a/src/app/add-project/add-project.component.html
+++ b/src/app/add-project/add-project.component.html
@@ -2,20 +2,30 @@
   <div class="row">
     <div class="col-md-12">
       <div class="col-md-8">
-<!--        <label for="organizationName">Organization Name</label>-->
-<!--        <input type="text" id="organizationName" class='form-control' formControlName="organizationName" ngModel/>-->
         <div class="col-md-6">
           <select class="form-control  form-control-tiny" formControlName="organizationName" id="organizationName">
             <option [value]="null" selected hidden>Organization Name</option>
             <option *ngFor="let org of organizationData"
                     [ngValue]="org">
               {{org.organizationName}}
-          </select> <pre></pre>
+          </select>
+          <pre></pre>
           <label for="projectName">Project Name</label>
-          <input type="text" id="projectName" class='form-control' formControlName='projectName'
+          <input type="text"
+                 id="projectName"
+                 class='form-control'
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['email']?.errors, 'is-valid': addFormControl['email']?.valid }"
+                 formControlName='projectName'
                  placeholder='Enter ProjectName' ngModel/>
+          <span
+            *ngIf="submitted || addFormControl['projectName'].touched || addFormControl['projectName'].dirty && addFormControl['projectName'].invalid"
+            class="info-msg text-danger">
+                <small
+                  *ngIf="addFormControl['projectName'].errors && addFormControl['projectName'].errors?.['required']">This is the required field.</small>
+            </span>
         </div>
       </div>
+      <pre></pre>
       <button nbButton Class="btn btn-warning" (click)="addProject()">Add Organization</button>
     </div>
   </div>
