--- a/src/app/request-clarification/request-clarification.component.html
+++ b/src/app/request-clarification/request-clarification.component.html
@@ -1,1 +1,51 @@
-<p>request-clarification works!</p>
+<!--<div class="container"  >-->
+<!--  <form [formGroup]="addForm">-->
+<!--    <div className="col-md-12 g-3">-->
+<!--      <div class="row">-->
+
+<!--        <div class="col-md-4">-->
+<!--          <label htmlFor="#" class="form-label">Subject</label>-->
+<!--          <input name="subject" class="form-control" placeholder='Enter Subject' value={subject} onChange={onChangeHandler}></input><hr></hr>-->
+<!--        </div>-->
+
+<!--        <div class="col-md-4">-->
+<!--          <label htmlFor="#" className='form-label'>Clarification Requested</label>-->
+<!--          <input name='clarificationRequested' class="form-control" type="text" placeholder='Enter Your clarificationRequested' onChange={onChangeHandler} value={clarificationRequested} /><hr />-->
+<!--        </div>-->
+<!--        <div class="col-md-4">-->
+<!--          <label htmlFor="#" className='form-label'>Module</label>-->
+<!--          <input name='module' class="form-control" type="text" placeholder='Enter module' onChange={onChangeHandler} value={module} /><hr></hr>-->
+
+<!--        </div>-->
+<!--      </div>-->
+
+<!--    </div>-->
+<!--    <div className="col-md 12 g-3">-->
+<!--      <div class="row">-->
+<!--        <div class="col-md-4">-->
+<!--          <label htmlFor="#" className='form-label'>Requested To</label>-->
+<!--          {/* <input name='requestedTo' class="form-control" type="text" placeholder='RequestedTo' onChange={onChangeHandler} value={requestedTo} /><hr></hr> */}-->
+<!--          <select className="form-control" onChange={onChangeHandler} name="requestedTo" >-->
+<!--            {userList.map(usr => <option value={usr.id}>{usr.userName}</option>)}-->
+<!--          </select><hr></hr>-->
+<!--        </div>-->
+<!--        <div class="col-md-4">-->
+<!--          <label htmlFor="#" className='form-label'>Expected Date For Closure</label>-->
+<!--          <input name='expectedDateForClosure' class="form-control" type="text" placeholder='yyyy-mm-dd' onChange={onChangeHandler} value={expectedDateForClosure} /><hr></hr>-->
+<!--        </div>-->
+<!--        <div class="col-md-4">-->
+<!--          <label htmlFor="#" className='form-label'>Email Reference</label>-->
+<!--          <input name='emailReference' class="form-control" type="text" placeholder='info@gmail.com' onChange={onChangeHandler} value={emailReference} /><hr></hr>-->
+<!--        </div>-->
+
+<!--      </div>-->
+
+
+<!--    </div>-->
+
+
+<!--    <button onClick={addHandler}>Add Clarification</button>-->
+
+<!--  </form>-->
+
+<!--</div>-->
