Modified routing and Added new features

--- a/src/app/add-project/add-project.component.html
+++ b/src/app/add-project/add-project.component.html
@@ -14,7 +14,7 @@
           <input type="text"
                  id="projectName"
                  class='form-control'
-                 [ngClass]="{ 'is-invalid': submitted && addFormControl['email']?.errors, 'is-valid': addFormControl['email']?.valid }"
+                 [ngClass]="{ 'is-invalid': submitted && addFormControl['projectName']?.errors, 'is-valid': addFormControl['projectName']?.valid }"
                  formControlName='projectName'
                  placeholder='Enter ProjectName' ngModel/>
           <span
