Added form for Request Clarification

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper hover_collapse">
   <!-- Sidebar  -->
   <nav id="sidebar" class="">
     <div class="sidebar-header ">
@@ -20,10 +20,10 @@
         <a (click)="routeToLogin()">Sign In</a>
       </li>
       <li>
-        <a>Request Clarification</a>
+        <a (click)="routeToRequestClarification()">Request Clarification</a>
       </li>
       <li>
-        <a >Clarification Table</a>
+        <a (click)="routeToClarificationTable()">Clarification Table</a>
       </li>
     </ul>
 
