--- a/src/app/request-clarification/request-clarification.component.html
+++ b/src/app/request-clarification/request-clarification.component.html
@@ -73,9 +73,9 @@
                [ngClass]="{ 'is-invalid': submitted && addFormControl['expectedDateForClosure']?.errors, 'is-valid': addFormControl['expectedDateForClosure']?.valid }"
                formControlName='expectedDateForClosure' ngModel/>
         <span
-          *ngIf="submitted || addFormControl['expectedDateForClosure'].touched || addFormControl['expectedDateForClosure'].dirty && addFormControl['expectedDateForClosure'].invalid"
+          *ngIf="submitted || addFormControl['expectedDateForClosure']?.touched || addFormControl['expectedDateForClosure']?.dirty && addFormControl['expectedDateForClosure'].invalid"
           class="info-msg text-danger">
-                <small *ngIf="addFormControl['expectedDateForClosure'].errors && addFormControl['expectedDateForClosure'].errors?.['required']">Date is required. </small>
+                <small *ngIf="addFormControl['expectedDateForClosure']?.errors && addFormControl['expectedDateForClosure'].errors?.['required']">Date is required. </small>
             </span>
       </div>
     </div>
@@ -87,7 +87,7 @@
                [ngClass]="{ 'is-invalid': submitted && addFormControl['emailReference']?.errors, 'is-valid': addFormControl['emailReference']?.valid }"
                formControlName='emailReference' ngModel/>
         <span
-          *ngIf="submitted || addFormControl['emailReference'].touched || addFormControl['emailReference'].dirty && addFormControl['emailReference'].invalid"
+          *ngIf="submitted || addFormControl['emailReference']?.touched || addFormControl['emailReference']?.dirty && addFormControl['emailReference'].invalid"
           class="info-msg text-danger">
                 <small *ngIf="addFormControl['emailReference'].errors && addFormControl['emailReference'].errors?.['required']">Email is required. </small>
             </span>
