--- a/src/app/request-clarification/request-clarification.component.html
+++ b/src/app/request-clarification/request-clarification.component.html
@@ -78,7 +78,7 @@
                 <small *ngIf="addFormControl['expectedDateForClosure']?.errors && addFormControl['expectedDateForClosure'].errors?.['required']">Date is required. </small>
             </span>
       </div>
-    </div>
+    </div><pre></pre>
     <div class="col-md-4">
       <div class="form-group">
         <label for="emailReference">Email Reference</label><br>
