Modified clarification list

--- a/src/app/clarification-list/clarification-list.component.html
+++ b/src/app/clarification-list/clarification-list.component.html
@@ -57,7 +57,7 @@
                   <input hidden formControlName="module">
                   <input hidden formControlName="subject">
                   <div class="col-md-12">
-                    <label for="provideClarification">Clarification Request</label>
+                    <label for="provideClarification">Provide Clarification</label>
                     <input class="form-control" type="text" formControlName="provideClarification" id="provideClarification">
                   </div>
                   <div class="col-md-12 mt-2">
